Prevent horizontal jumpiness

--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
          --bgColor: #fff;
 
   font-family: 'GenomeThin', sans-serif;
+   overflow-y: scroll;
     font-size: 16px;
 }
 
